...
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutSearch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/editTextSearch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/edit_text_search"
                    android:background="@color/white"
                    android:inputType="textPersonName"/>

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewSearchResults"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:layout_below="@id/textInputLayoutSearch"/>

...
