...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            tool:ignore="RtlHardcoded">

            <Button
                android:id="@+id/btn_view_post"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:text="@string/btn_view_posts"
                android:textColor="@color/colorPrimary" />

...
